# ots_hw_4_SFINAE

./: CMakeLists.txt  Doxyfile  annotated.html  classes.html  dir_3ee47e6a3f6bb14d23b8780f671b7068.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  structTupleIsGomogen-members.html  structTupleIsGomogen.html  structTupleIsGomogenCopare-members.html  structTupleIsGomogenCopare.html  version_8h_source.html
.github/workflows/: doxygen-gh-pages.yml  release.yml
search/: all_0.js  all_2.js  all_3.js  classes_0.js  functions_1.js  searchdata.js
src/: main.cpp
